# Tiago_pro_VLA

./: .gitignore  NOTES.md  README.md
Kyungki_Data/Presentation/Tiago Pro Development/: Tiago Pro Development.pptx
Kyungki_Data/Presentation/Tiago Pro Development/MCP servers/: mcp_config.json  server.py
openvla/: requirements.txt  run_openvla.py  tiago_pro.urdf
ros2_ws/: README.md
ros2_ws/src/tiago_moveit_vla/: CMakeLists.txt  package.xml
ros2_ws/src/tiago_moveit_vla/src/: vla_cartesian_executor.cpp
ros2_ws/src/vla_startup/: package.xml  setup.cfg  setup.py
ros2_ws/src/vla_startup/launch/: vla_frame_debug.launch.py
ros2_ws/src/vla_startup/vla_startup/: testopenvla.py  vla_arm_node.py  vla_frame_debug.py
